Fix background image bug on Safari

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -76,11 +76,22 @@ svg {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: repeating-conic-gradient(#0000 0.000045%, #000d 0.0005%), var(--screenImage);
-  background-blend-mode: soft-light;
-
+  background-image: repeating-conic-gradient(#0000 0.000045%, #000d 0.0005%);
   box-shadow: var(--screenGlow);
   animation: 0.5s ease-in-out infinite fuzzy-screen;
+}
+
+#screen::after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  content: '';
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.8;
+  background-image: var(--screenImage);
 }
 
 #progress-bar {
@@ -123,20 +134,12 @@ span {
   }
 }
 
-@-webkit-keyframes fuzzy-screen {
-  33% {
-    background-image: repeating-conic-gradient(#0000 0.000054%, #000d 0.0004%), var(--screenImage);
-  }
-  66% {
-    background-image: repeating-conic-gradient(#0000 0.00005%, #000d 0.00054%), var(--screenImage);
-  }
-}
 @keyframes fuzzy-screen {
   33% {
-    background-image: repeating-conic-gradient(#0000 0.000054%, #000d 0.0004%), var(--screenImage);
+    background-image: repeating-conic-gradient(#0000 0.000054%, #000d 0.0004%);
   }
   66% {
-    background-image: repeating-conic-gradient(#0000 0.00005%, #000d 0.00054%), var(--screenImage);
+    background-image: repeating-conic-gradient(#0000 0.00005%, #000d 0.00054%);
   }
 }
 
